Fix spacing for tool button icons

--- a/react/src/components/tools/tools.css
+++ b/react/src/components/tools/tools.css
@@ -2,26 +2,20 @@
     width: 8vw;
     height: 100vh;
     padding: 0;
-    /*margin-top: 1vh;*/
-    /*margin-left: 0.25vw;*/
-    /*margin-left: 5vw;*/
     position: absolute;
     background-color: #333338;
-
-
-    /*float: left;*/
 }
 
 .tool_button {
     padding: 1.2%;
-    /*padding-top: 1vh;*/
     font-weight: bold;
-    /*font-size: 110%;*/
     border: 1px solid black;
     border-radius: 20px;
     margin-right: 1vw;
     display: flex;
     justify-content: center;
+    text-align: center;
+    font-size: 120%;
     width: 6vw;
     margin-left: 0.5vw;
     margin-top: 1vh;
@@ -31,5 +25,5 @@
 }
 
 .tool_button * {
-    /*margin-left: 4vw;*/
+    margin-right: 10px;
 }
